revision to HackNC post

--- a/_posts/2016-10-31-Hack-N-C.md
+++ b/_posts/2016-10-31-Hack-N-C.md
@@ -60,7 +60,7 @@ _Think, Type, and Magic Happens_, and that basic idea is why I'm interested in p
 cool that I can think of something, and then make it come to life (assuming I can figure out what all the complicated 
 documentation means, or if I just find someone who does). 
 
-Around 10pm Saturday night, after ~11 hours of trying to hack, my team decided to give up. Before heading home, we had a 
+Around 10 Saturday night, after ~11 hours of trying to hack, my team decided to give up. Before heading home, we had a 
 reflection session about our accomplishments so we didn't leave feeling like total losers. 
 Here are some of my accomplishments and take-aways:
 
