Updated categories + add coursework

--- a/_posts/2016-10-31-HackNC.md
+++ b/_posts/2016-10-31-HackNC.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 Title: HackNC Reflection
-category: inls161
+category: coursework
 ---
 
 For my second community event I attended my first [hackathon](https://hacknc.com/)! I was nervous before attending, 
